--- a/src/components/main/mobileAside/MobileAside.scss
+++ b/src/components/main/mobileAside/MobileAside.scss
@@ -12,7 +12,7 @@
   .showMobileAside {
     position: absolute;
     top: 0;
-    right: 32px;
+    right: 30px;
     @include setFlex(column);
     min-width: 200px;
     height: 100%;
